--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
 PORT=5000
 NODE_ENV=development
 MONGODB_CONN_STR=mongodb://localhost:27017/quiz_maker_express
+MONGODB_STORE_SECRET=my_mongo_store_secret
