--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,5 @@ PORT=5000
 NODE_ENV=development
 MONGODB_CONN_STR=mongodb://localhost:27017/quiz_maker_express
 MONGODB_STORE_SECRET=my_mongo_store_secret
+
+PG_CONN_STR=postgres://postgres:123456@localhost:5432/quiz_maker_node
