reworked admin controllers and views

--- a/config/config.env
+++ b/config/config.env
@@ -4,3 +4,4 @@ MONGODB_CONN_STR=mongodb://localhost:27017/quiz_maker_express
 MONGODB_STORE_SECRET=my_mongo_store_secret
 
 PG_CONN_STR=postgres://postgres:123456@localhost:5432/quiz_maker_node
+PG_STORE_SECRET=my_postgres_store_secret
