--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
